--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "activationEvents": [
     "onDebug"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jtreminio/vscode-cursor-variable-inspect.git"
+  },
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -49,7 +53,7 @@
     "watch": "node esbuild.extension.js --watch & node esbuild.webview.js --watch",
     "lint": "eslint src --ext ts",
     "lint:fix": "eslint src --ext ts --fix",
-    "package": "vsce package"
+    "package": "mkdir -p releases && vsce package --out releases/"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -57,7 +61,8 @@
     "@types/vscode": "^1.80.0",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
-    "@vscode/vsce": "^2.22.0",
+    "@vscode/vsce": "^2.15.0",
+    "cheerio": "^1.0.0-rc.9",
     "esbuild": "^0.25.10",
     "eslint": "^9.36.0",
     "typescript": "^5.0.0",
